# flashcard-ai

./: .gitignore  API.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/cards/: models.py  serializers.py  services.py  urls.py  views.py
backend/cards/migrations/: 0001_initial.py
backend/categories/: models.py  serializers.py  urls.py  views.py
backend/categories/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
backend/decks/: models.py  serializers.py  urls.py  views.py
backend/decks/migrations/: 0001_initial.py
backend/signup/: serializers.py  urls.py  views.py
backend/subcategories/: models.py  serializers.py  urls.py  views.py
backend/subcategories/migrations/: 0001_initial.py
backend/users/: models.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_options.py
frontend/: .env.example  .env.production  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: api.ts
frontend/src/components/: return-button.tsx
frontend/src/context/: auth-context.tsx  toast-context.tsx
frontend/src/hooks/: useAuth.ts  useCard.ts  useCategory.ts  useDeck.ts  useRefreshToken.ts  useSubCategory.ts  useToast.ts
frontend/src/pages/: categories.tsx  register-and-login.tsx
frontend/src/pages/cards/: cards.tsx
frontend/src/pages/cards-view/: cards-view.tsx
frontend/src/routes/: private-router.tsx  routes.tsx
frontend/src/utils/: auth-memory.ts
(+13 files in other folders)
