[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "django==5.2.9",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "pyjwt==2.10.1",
    "sqlparse==0.5.4",
]
